# Principia_Mathematica-

./: .gitignore  README  data_architecture_demo.cxx
Electromagnetic_Wave_Propagation_Sim/: CMakeLists.txt  REAME  main.cxx
cybersecurity_Maxwell_equation/: FDTD-Based_Electromagnetic_Leakage_Detection_for_Secure_Hardware_Design.cxx
dataFrame_cxx/: .gitignore  CMakeLists.txt  dataFrame.cxx  df_old.cxx
tensor_dir/: 2D_3D_tensor.cxx  3d_tensor.cxx  System_of_Linear_Equations.cxx  matrix_vector_MULTI.cxx  tensor_doc.txt  tensor_layer.cxx
tensor_dir/optimizer_problem/: CMakeLists.txt  main.cxx
tensor_dir/tensor_iterators_loops/: 1D_it_loop.cxx  2D_it_loop.cxx  3D_it_loop.cxx  4D_it_loop.cxx  example.cxx
